optimze codes